--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -531,14 +531,14 @@
     <img src="../../assets/widget_1.svg" alt="" class="widgetLeft" />
     <div>
       <p class="mat-display-1 widgetTitle">62</p>
-      <p class="mat-body-2 widgetSubtitle fgAdditionalColor1">Example 1</p>
+      <p class="mat-body-2 widgetSubtitle fgBrandColor1">Example 1</p>
     </div>
   </div>
   <div class="widgetWrapper bgAdditionalColor2 d-flex col-sm">
     <img src="../../assets/widget_2.svg" alt="" class="widgetLeft" />
     <div>
       <p class="mat-display-1 widgetTitle">6.8</p>
-      <p class="mat-body-2 widgetSubtitle fgAdditionalColor1">Example 2</p>
+      <p class="mat-body-2 widgetSubtitle fgBrandColor1">Example 2</p>
     </div>
   </div>
   <div class="widgetWrapper bgAdditionalColor2 d-flex col-sm">
@@ -546,16 +546,16 @@
     <div>
       <p class="mat-display-1 widgetTitle">
         9
-        <span class="fgAdditionalColor1">(14%)</span>
+        <span class="fgBrandColor1">(14%)</span>
       </p>
-      <p class="mat-body-2 widgetSubtitle fgAdditionalColor1">Example 3</p>
+      <p class="mat-body-2 widgetSubtitle fgBrandColor1">Example 3</p>
     </div>
   </div>
   <div class="widgetWrapper bgAdditionalColor2 d-flex col-sm">
     <img src="../../assets/widget_4.svg" alt="" class="widgetLeft" />
     <div>
       <p class="mat-display-1 widgetTitle">83%</p>
-      <p class="mat-body-2 widgetSubtitle fgAdditionalColor1">Example 4</p>
+      <p class="mat-body-2 widgetSubtitle fgBrandColor1">Example 4</p>
     </div>
   </div>
 </div>
