--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -1,9 +1,9 @@
 <div class="sideMenuWrapper fgBrandColor1 bgAdditionalColor1">
-  <p class="mat-display-2 topSideMenu bgBrandColor3">Side menu</p>
+<!--  <p class="mat-display-2 topSideMenu bgBrandColor3">Side menu</p>
   <p class="mat-body-2 itemMenu bgAdditionalColor1 fgBrandColor1 noUserSelect" routerLink="">General</p>
   <p class="mat-body-2 itemMenu bgAdditionalColor1 fgBrandColor1 noUserSelect" routerLink="">Header</p>
   <p class="mat-body-2 itemMenu bgAdditionalColor1 fgBrandColor1 noUserSelect" routerLink="">Footer hdefuf</p>
   <p class="mat-body-2 itemMenu bgAdditionalColor1 fgBrandColor1 noUserSelect" routerLink="">Components</p>
-  <p class="mat-body-2 itemMenu bgAdditionalColor1 fgBrandColor1 noUserSelect" routerLink="">DEV (temporary)</p> 
+  <p class="mat-body-2 itemMenu bgAdditionalColor1 fgBrandColor1 noUserSelect" routerLink="">DEV (temporary)</p> -->
   
 </div>
