--- a/src/styles.scss
+++ b/src/styles.scss
@@ -175,7 +175,7 @@ input[type="checkbox"]:focus, input[type="checkbox"]:checked {
 }
 
 .smallTextLink {
-  color: #d1dce5;
+  color: #4B4846;
 }
 
 .customOl {
@@ -1304,7 +1304,7 @@ input[type=password]:not(:placeholder-shown) {
 
 .form-control::placeholder,
 .textLabel::placeholder {
-  color: #A9A9A9 !important;
+  color: #4B4846 !important;
   opacity: 1;
 }
 
