--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -77,7 +77,7 @@
       </p>
       <br />
       <div class="customHr bgAdditionalColor1"></div>
-      <p class="mat-body-2 lowerCustomCard fgAdditionalColor1">
+      <p class="mat-body-2 lowerCustomCard fgBrandColor1">
         Experienced team
       </p>
     </div>
@@ -91,7 +91,7 @@
       </p>
       <br />
       <div class="customHr bgAdditionalColor1"></div>
-      <p class="mat-body-2 lowerCustomCard fgAdditionalColor1">
+      <p class="mat-body-2 lowerCustomCard fgBrandColor1">
         Experienced team
       </p>
     </div>
@@ -105,7 +105,7 @@
       </p>
       <br />
       <div class="customHr bgAdditionalColor1"></div>
-      <p class="mat-body-2 lowerCustomCard fgAdditionalColor1">
+      <p class="mat-body-2 lowerCustomCard fgBrandColor1">
         Experienced team
       </p>
     </div>
