--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -1362,7 +1362,7 @@
 
 <p class="mat-display-2 sectionSeparator">Progress bar</p>
 <div id="fontHelvatica">
-  <div class="wrapper option-1 option-1-1">
+  <!--<div class="wrapper option-1 option-1-1">
     <ol class="c-stepper">
       <li class="c-stepper__item">
         <h3 class="c-stepper__title">Level 1</h3>
@@ -1392,9 +1392,13 @@
       <li class="c-stepper__item_3 opacity-50"></li>
       <li class="c-stepper__item_3 opacity-50"></li>
     </ol>
-  </div>
+  </div>-->
   <br />
   <div role="progressbar" style="--value: 69"></div>
+  <br />
+  <div style="margin-left: 200px; margin-right: 200px;">
+    <mat-progress-bar class="mat-progress-bar" value={{progress}}></mat-progress-bar>
+  </div>
 </div>
 
 <p class="mat-display-2 sectionSeparator">Table</p>
