--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1637,4 +1637,9 @@ bs-datepicker-navigation-view > *
   color: $brand-color-1 !important;
   font-weight: 600 !important;
 }
+
+mat-progress-bar.mat-progress-bar .mat-progress-bar-fill::after {
+  background-color: $brand-color-2 !important; 
+  border-color: $brand-color-1 !important; 
+}
 //-----------------------------------------------------------------------------
